tests/ui/hygiene/expansion-info-reset.stderr
error: format argument must be a string literal
  --> $DIR/expansion-info-reset.rs:2:18
   |
LL |     format_args!({ #[derive(Clone)] struct S; });
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: you might be missing a string literal to format with
   |
LL |     format_args!("{}", { #[derive(Clone)] struct S; });
   |                  +++++

error: aborting due to 1 previous error

